--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "@koa/router": "^10.1.1",
+    "chalk": "^4.1.2",
     "firebase": "^8.10.1",
     "koa": "^2.13.4",
     "koa-bodyparser": "^4.3.0",
