feat: apload on heroku

--- a/package.json
+++ b/package.json
@@ -16,9 +16,7 @@
     "firebase": "^8.10.1",
     "koa": "^2.13.4",
     "koa-bodyparser": "^4.3.0",
+    "nodemon": "^2.0.16",
     "pg": "^8.7.3"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.15"
   }
 }
