--- a/package.json
+++ b/package.json
@@ -13,10 +13,15 @@
   "dependencies": {
     "@koa/cors": "^3.3.0",
     "@koa/router": "^10.1.1",
+    "bcrypt": "^5.0.1",
     "firebase": "^8.10.1",
+    "jsonwebtoken": "^8.5.1",
     "koa": "^2.13.4",
     "koa-bodyparser": "^4.3.0",
+    "koa-cookie": "^1.0.0",
+    "nodemailer": "^6.7.4",
     "nodemon": "^2.0.16",
-    "pg": "^8.7.3"
+    "pg": "^8.7.3",
+    "uuid": "^8.3.2"
   }
 }
