--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@koa/cors": "^3.3.0",
     "@koa/router": "^10.1.1",
     "bcrypt": "^5.0.1",
+    "cookies": "^0.8.0",
+    "dotenv": "^16.0.0",
     "firebase": "^8.10.1",
     "jsonwebtoken": "^8.5.1",
     "koa": "^2.13.4",
