feat: add websockets

--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "nodemailer": "^6.7.4",
     "nodemon": "^2.0.16",
     "pg": "^8.7.3",
-    "uuid": "^8.3.2"
+    "socket.io": "^4.5.0",
+    "uuid": "^8.3.2",
+    "ws": "^8.6.0"
   }
 }
